# ETF-Scraper

./: .dockerignore  .gcloudignore  .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: check-scraper.yml  check_invesco.yml  check_ishares.yml  check_spy.yml  check_ssga.yml  check_vanguard.yml  check_voo.yml
Notebooks/: bulk_scraping.ipynb  scripting.ipynb
docker/: Dockerfile
gcp/: bigquery_update.py  calculate_flows.py  cloud_run_scraper.py  cloudbuild.yaml  generate_tracked_tickers.py  run_all.sh  setup_gh.py  workflow.yaml
scripts/: scrape_etf.py  scrape_hist.py  server.py
src/etf_scraper/: __init__.py  api.py  base.py  config.py  main.py  scrapers.py  storage.py  utils.py
src/etf_scraper/data/: listings.csv
src/test/: test_holdings_parsing.py  test_utils.py
src/test/test_data/: .~lock.IShares_IVV_holdings_20221230_resp.csv#  .~lock.SSGA_SPY_holdings_20230110_resp.xlsx#  IShares_IVV_holdings_20221230_resp.csv  Invesco_QQQ_holdings_20230113.csv  SSGA_SPY_holdings_20230110_resp.xlsx  Vanguard_VOO_holdings_20221130_resp.json
test/test_data/: IShares_HEWU_holdings_20230121.csv  IShares_IVV_holdings_20221230_resp.csv  SSGA_SPY_holdings_20230110_resp.xlsx
