[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etf_scraper"
dynamic = ["version"]
description = "Scrape ETF and Mutual Fund holdings from major providers"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "tenacity",
    "numpy",
    "pandas>=1.5",
    "pandas_market_calendars",
    "openpyxl",
]

[project.optional-dependencies]
cloud = [
    "gcsfs",
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
]
tests = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"etf_scraper.data" = ["*.csv"]