[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etf_scraper"
dynamic = ["version"]
description = "Scrape ETF and Mutual Fund holdings from major providers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests",
    "tenacity",
    "pandas>=1.5",
    "numpy",
    "pandas_market_calendars",
    "openpyxl",
]

[project.optional-dependencies]
cloud = [
    "gcsfs",
    "fastparquet<=2023.01",
    "google-cloud-bigquery",
]
tests = [
    "pytest",
]

[project.urls]
Home = "https://github.com/nikulpatel3141/ETF-Scraper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"etf_scraper.data" = ["*.csv"]
